# apple2-mcp

./: .gitignore  AI_TIPS.md  README.md  architecture.md  checkers-working.bas  pyproject.toml  violent-checkers-gr.bas  violent-checkers-hgr.bas  violent-checkers.dsk
knowledge/: techniques.json
reports/: 00-project-overview.md  01-bobbin-setup.md  02-mcp-server-implementation.md
src/apple2_mcp/: README.md  __init__.py  assembler.py  control_socket.py  disktools.py  emulator.py  encoding.py  proxy_control.py  screen.py  server.py
src/apple2_mcp/tools/: __init__.py
